# RedisShake

./: .gitattributes  .gitignore  ChangeLog  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  build.sh  entrypoint.sh  go.mod  go.sum  license.txt  pyproject.toml  redis-shake.toml  restore.toml  scan.toml  shake.toml  shake_scan_env.toml  shake_sync_env.toml  sync.toml  test.sh
.circleci/: config.yml
.github/: .codespellrc  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  crash_report.md  feature_request.md  issue.md
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  release.yml
cmd/redis-shake/: main.go  main_test.go
conf/: redis-shake.conf
configs/: all.toml
configs/transform/: aliyun.lua  aws.lua  key_prefix.lua  skip_scripts.lua
converter/: convert_key.lua
docs/: .gitignore  package-lock.json  package.json  quick_start.md
docs/.vitepress/: config.ts  en.ts  zh.ts
docs/src/: index.md
filters/: aliyun.lua  aws.lua  key_prefix.lua  print.lua  swap_db.lua
internal/aof/: aof.go  aof_check.go  aof_check_test.go
internal/client/: func.go  (+2 more)
pybbt/: __init__.py  __main__.py  assertion.py  context.py  error_case.py  launcher.py  logger.py  safe_thread.py
scripts/: README.md  gen_table_go_from_table_json.py  gen_table_json_from_commands.py  hypervisor.c  run_direct.py  start.sh  stop.sh  table.json
src/: go.mod  go.sum
test/: README.md  deploy_cluster.sh  deploy_standalone.sh  main.py  requirements.txt  standalone.sh  test.sh  test_normal.sh
tests/: README.md  requirements.txt
tools/: build-cluster.expect  redis.conf
(+273 files in other folders)
